--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
-
-
-html, body{
+html,
+body {
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     width: 100%;
     height: 100%;
     font-family: sans-serif;
@@ -15,7 +14,7 @@ body{
     font-family: 'Open Sans', sans-serif;
 }
 
-.title{
+.title {
     text-align: center;
     font-size: 40px;
     color: #6a6a6a;
@@ -24,51 +23,33 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 
-
-.container{
+.container {
     width: 100%;
-    max-width: 1200px;
-    height: 430px;
+    /* max-width: 1200px; */
+    height: auto;
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content: center;
     margin: auto;
 }
-.container .card{
+
+.container .card {
     width: 330px;
     height: auto;
     border-radius: 8px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2); */
     overflow: hidden;
-    margin: 20px;
-    text-align: center;
-    transition: all 0.25s;
+    margin: 17px;
 }
 
-.container .card:hover{
-    transform: translateY(-15px);
-    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
-}
-
-.container .card img{
+.container .card img {
     width: 330px;
     height: 220px;
 }
 
-
-.container .card h4{
-    font-weight: 600;
+.parrafo {
+    text-align: justify;
+    font-size: 21px;
+    margin: 0;
+    padding: 80px;
 }
-
-.container .card p{
-    padding: 0 1rem;
-    font-size: 16px;
-    font-weight: 300;
-}
-
-.container .card a {
-    font-weight: 500;
-    text-decoration: none;
-    color: #3498db;
-}
-
